syntax = "proto3";

package book;
option go_package = "github.com/sibobbbbbb/backend-engineer-challenge/proto/book";

service BookService {
  rpc CreateBook (CreateBookRequest) returns (BookResponse);
  rpc GetBook (GetBookRequest) returns (BookResponse);
  rpc ListBooks (ListBooksRequest) returns (ListBooksResponse);
  rpc UpdateBook (UpdateBookRequest) returns (BookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
  rpc SearchBooks (SearchBooksRequest) returns (ListBooksResponse);
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 published_year = 5;
  repeated string category_ids = 6;
  int32 stock = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  int32 published_year = 4;
  repeated string category_ids = 5;
  int32 stock = 6;
}

message GetBookRequest {
  string id = 1;
}

message ListBooksRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListBooksResponse {
  repeated Book books = 1;
  int32 total = 2;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 published_year = 5;
  repeated string category_ids = 6;
  int32 stock = 7;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}

message SearchBooksRequest {
  string query = 1;
  int32 page = 2;
  int32 limit = 3;
}

message BookResponse {
  Book book = 1;
}