syntax = "proto3";

package category;
option go_package = "github.com/sibobbbbbb/backend-engineer-challenge/proto/category";

service CategoryService {
  rpc CreateCategory (CreateCategoryRequest) returns (CategoryResponse);
  rpc GetCategory (GetCategoryRequest) returns (CategoryResponse);
  rpc ListCategories (ListCategoriesRequest) returns (ListCategoriesResponse);
  rpc UpdateCategory (UpdateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory (DeleteCategoryRequest) returns (DeleteCategoryResponse);
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  string created_at = 4;
  string updated_at = 5;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message GetCategoryRequest {
  string id = 1;
}

message ListCategoriesRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListCategoriesResponse {
  repeated Category categories = 1;
  int32 total = 2;
}

message UpdateCategoryRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message DeleteCategoryRequest {
  string id = 1;
}

message DeleteCategoryResponse {
  bool success = 1;
}

message CategoryResponse {
  Category category = 1;
}